--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,11 @@ miningbee-*.tar
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
 /priv/static/
+
+#Sublime Project
+*.sublime-*
+
+### OSX ###
+.DS_Store
+.AppleDouble
+.LSOverride
